1-OkHttpManager 增加特殊请求头；2-新增SHA256算法 用于请求头加密；3-任务中心完善；4-扫描入口重构包裹打包、新增新建包裹功能；5-新增司机角色；

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,7 +101,9 @@
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".main.MyMessageActivity" />
         <activity android:name=".main.MyLocationActivity" />
-        <activity android:name=".main.ExpressSearchActivity" />
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".main.ExpressSearchActivity" />
         <activity android:name=".main.HistoryScanActivity" />
         <activity
             android:name=".main.ScanBarcodeActivity"
