1-首页界面重构，扫描功能全部放在首页，并取消了二级扫描入口界面；2-司机、快递员权限控制；3-任务中心优化，修复了上一版的bug。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.contrarywind:Android-PickerView:4.1.6'//选择省市区
     implementation 'com.belerweb:pinyin4j:2.5.1'    //客户管理 拼音滑动
-    implementation files('libs/BaiduLbs_Android.jar')
+    implementation files('libs/BaiduLBS_Android.jar')
 }
